# agent-runtime-layers

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  agent.py  api.py  core.py  hooks.py  main.py  pyproject.toml  sandbox_runner.py  tools.py
autonomy/: __init__.py  scheduler.py
context/: __init__.py  manager.py  rag.py
dlq/: __init__.py  manager.py
docs/: agent_patterns.md  nemoclaw_mapping.md  openShell_overview.md  sla_thresholds.md
evals/: cache.py  cache_demo.py  deterministic_evals.py  judge.py  langfuse_evals.py  memory_comparison.py  rag_comparison.py  run_all.py  skill_evals.py
langgraph_agents/: __init__.py  pipeline.py
marketplace/: index.json
marketplace/capacity_planner/: SKILL.md  __init__.py  policy.yaml  skill.py
marketplace/error_budget/: SKILL.md  __init__.py  policy.yaml  skill.py
mcp_integration/: __init__.py  client.py  server.py
memory/: __init__.py  vector_store.py
openshell/: policy.yaml  setup.md
openshell/agent-sandbox/: Dockerfile  README.md
prompts/: __init__.py  chat_agent.md  loader.py  research_agent.md  single_shot_agent.md  storage_agent.md
scripts/: benchmark-openshell.sh  create-sandbox.sh  setup-openshell.sh  teardown-openshell.sh
skills/: __init__.py  context.py  marketplace.py  registry.py  reload_demo.py  research_and_summarize.py  resolver.py
skills/cluster_briefing/: SKILL.md  __init__.py  policy.yaml  skill.py
skills/research_and_summarize/: SKILL.md  __init__.py  policy.yaml  skill.py
skills/storage_health_check/: SKILL.md  __init__.py  policy.yaml  skill.py
skills/storage_sla_report/: SKILL.md  __init__.py  policy.yaml  skill.py
strands_agent/: __init__.py  agent.py
tests/: conftest.py  test_api.py  test_tools.py
