[project]
name = "agent-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.1",
    "ddgs>=9.14.4",
    "deepeval>=2.6.6",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.2",
    "langfuse>=4.6.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
# deepeval's pytest plugin imports `langchain.schema`, which LangChain 1.x removed,
# breaking collection. We don't use deepeval's plugin, so disable it.
addopts = "-p no:plugins"
testpaths = ["tests"]

