[project]
name = "agent-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "click>=8.1.0,<8.4.0",
    "ddgs>=9.14.4",
    "deepeval>=4.0.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.2",
    "langfuse>=4.6.1",
    "langgraph>=1.2.1",
    "mcp>=1.27.1",
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.47.0",
]

[tool.pytest.ini_options]
# deepeval 4.x is compatible with LangChain 1.x, so its pytest plugin loads cleanly
# (the older 2.x plugin imported the removed `langchain.schema`).
testpaths = ["tests"]

